added section introduction

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -83,3 +83,157 @@ keywords = "Car-following model, Traffic oscillations, Flow instability, Acceler
   year={1993},
   publisher={John Wiley \& Sons}
 }
+
+
+@article{vehicleCrashSurvey2015,
+  title={Critical Reasons for Crashes Investigated in the National Motor Vehicle Crash Causation Survey}, 
+  author={US Department of Transportation National Highway Traffic Safety Administration},
+  journal={NHTSA, Washington, DC, USA},
+  year={2015}
+}
+
+@inproceedings{OnRampMerge2020,
+author = {Lin, Yuan and McPhee, John and Azad, Nasser},
+year = {2020},
+month = {10},
+pages = {7-14},
+title = {Anti-Jerk On-Ramp Merging Using Deep Reinforcement Learning},
+doi = {10.1109/IV47402.2020.9304647}
+}
+
+@article{OnRampMerge2018,
+author = {Wang, Pin and Chan, Ching-Yao},
+year = {2018},
+month = {03},
+pages = {},
+title = {Autonomous Ramp Merge Maneuver Based on Reinforcement Learning with Continuous Action Space}
+}
+
+@inproceedings{intersection1,
+author = {Isele, David and Rahimi, Reza and Cosgun, Akansel and Subramanian, Kaushik and Fujimura, Kikuo},
+year = {2018},
+month = {05},
+pages = {2034-2039},
+title = {Navigating Occluded Intersections with Autonomous Vehicles Using Deep Reinforcement Learning},
+doi = {10.1109/ICRA.2018.8461233}
+}
+
+@INPROCEEDINGS{intersection2,
+  author={G. {Tolebi} and N. S. {Dairbekov} and D. {Kurmankhojayev} and R. {Mussabayev}},
+  booktitle={2018 14th International Conference on Electronics Computer and Computation (ICECCO)}, 
+  title={Reinforcement Learning Intersection Controller}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={206-212},
+  doi={10.1109/ICECCO.2018.8634692}
+}
+
+@INPROCEEDINGS{LangeChange1,
+  author={P. {Wang} and C. {Chan} and A. {de La Fortelle}},
+  booktitle={2018 IEEE Intelligent Vehicles Symposium (IV)}, 
+  title={A Reinforcement Learning Based Approach for Automated Lane Change Maneuvers}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1379-1384},
+  doi={10.1109/IVS.2018.8500556}
+}
+
+@article{intersection3,
+title = {Multi-Objective reinforcement learning approach for improving safety at intersections with adaptive traffic signal control},
+journal = {Accident Analysis \& Prevention},
+volume = {144},
+pages = {105655},
+year = {2020},
+issn = {0001-4575},
+doi = {https://doi.org/10.1016/j.aap.2020.105655},
+author = {Yaobang Gong and Mohamed Abdel-Aty and Jinghui Yuan and Qing Cai}
+}
+
+@article{SafeEfficientAndComfortable,
+title = {Safe, efficient, and comfortable velocity control based on reinforcement learning for autonomous driving},
+journal = {Transportation Research Part C: Emerging Technologies},
+volume = {117},
+pages = {102662},
+year = {2020},
+issn = {0968-090X},
+doi = {https://doi.org/10.1016/j.trc.2020.102662},
+url = {https://www.sciencedirect.com/science/article/pii/S0968090X20305775},
+author = {Meixin Zhu and Yinhai Wang and Ziyuan Pu and Jingyun Hu and Xuesong Wang and Ruimin Ke},
+keywords = {Car following, Autonomous driving, Velocity control, Reinforcement learning, NGSIM, Deep Deterministic Policy Gradient (DDPG)}
+}
+
+@article{HumanLikeAutonomouCF,
+title = {Human-like autonomous car-following model with deep reinforcement learning},
+journal = {Transportation Research Part C: Emerging Technologies},
+volume = {97},
+pages = {348-368},
+year = {2018},
+issn = {0968-090X},
+doi = {https://doi.org/10.1016/j.trc.2018.10.024},
+url = {https://www.sciencedirect.com/science/article/pii/S0968090X1830055X},
+author = {Meixin Zhu and Xuesong Wang and Yinhai Wang},
+keywords = {Autonomous car following, Human-like driving planning, Deep reinforcement learning, Naturalistic driving study, Deep deterministic policy gradient}
+}
+
+
+@article{CFelectricVehicle,
+author = {Yuankai, Wu and Tan, Huachun and Peng, Jiankun and Ran, Bin},
+year = {2019},
+month = {09},
+pages = {},
+title = {A Deep Reinforcement Learning Based Car Following Model for Electric Vehicle},
+volume = {2},
+journal = {Smart City Application},
+doi = {10.33142/sca.v2i5.813}
+}
+
+@article{Chong2011SimulationOD,
+  title={Simulation of Driver Behavior with Agent-Based Back-Propagation Neural Network},
+  author={L. Chong and Montasir M. Abbas and Alejandra Medina},
+  journal={Transportation Research Record},
+  year={2011},
+  volume={2249},
+  pages={44 - 51}
+}
+
+@article{ZHOU2017245,
+title = {A recurrent neural network based microscopic car following model to predict traffic oscillation},
+journal = {Transportation Research Part C: Emerging Technologies},
+volume = {84},
+pages = {245-264},
+year = {2017},
+issn = {0968-090X},
+doi = {https://doi.org/10.1016/j.trc.2017.08.027},
+url = {https://www.sciencedirect.com/science/article/pii/S0968090X17302371},
+author = {Mofan Zhou and Xiaobo Qu and Xiaopeng Li},
+keywords = {Recurrent neural networks, Traffic flow dynamics, Car-following, Oscillation}
+}
+
+@article{ComparisonRLvsMPC,
+author = {Lin, Yuan and McPhee, John and Azad, Nasser},
+year = {2019},
+month = {10},
+pages = {},
+title = {Comparison of Deep Reinforcement Learning and Model Predictive Control for Adaptive Cruise Control}
+}
+
+@INPROCEEDINGS{DissipatingStopAndGoWaves,
+  author={A. R. {Kreidieh} and C. {Wu} and A. M. {Bayen}},
+  booktitle={2018 21st International Conference on Intelligent Transportation Systems (ITSC)}, 
+  title={Dissipating stop-and-go waves in closed and open networks via deep reinforcement learning}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1475-1480},
+  doi={10.1109/ITSC.2018.8569485}
+}
+
+@unknown{DampenStopAndGoTraffic,
+author = {Jiang, Liming and Xie, Yuanchang and Chen, Danjue and Li, Tienan and Evans, Nicholas},
+year = {2020},
+month = {05},
+pages = {},
+title = {Dampen the Stop-and-Go Traffic with Connected and Automated Vehicles- A Deep Reinforcement Learning Approach}
+}
